[gd_scene load_steps=3 format=3 uid="uid://bg3at43gde03m"]

[ext_resource type="Script" uid="uid://bi8ap4kqorfqm" path="res://algorithms/proceduralgeneration/tessellatingportal/tessellating_portal.gd" id="1_portal"]
[ext_resource type="Script" uid="uid://x7gjumfr6kms" path="res://algorithms/proceduralgeneration/tessellatingportal/portal_demo_controller.gd" id="2_controller"]

[node name="TessellatingPortalDemo" type="Node3D"]
script = ExtResource("2_controller")

[node name="TessellatingPortal" type="Node3D" parent="."]
script = ExtResource("1_portal")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 8)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Control"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_bottom = 700.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Tessellating Portal"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="PortalTypeLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Portal Type: Cube"

[node name="PortalTypeOption" type="OptionButton" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/id = 0
popup/item_1/id = 1
popup/item_2/id = 2
popup/item_3/id = 3
popup/item_4/id = 4
popup/item_5/id = 5

[node name="RadiusSlider" type="HSlider" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 3.0

[node name="ThicknessLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Thickness: 1.5"

[node name="ThicknessSlider" type="HSlider" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.5

[node name="BlockSizeLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Block Size: 0.5"

[node name="BlockSizeSlider" type="HSlider" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.05
value = 0.1

[node name="HSeparator2" type="HSeparator" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Portal Color"

[node name="ColorPicker" type="ColorPicker" parent="UI/Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
color = Color(0.3, 0.6, 1, 1)

[node name="EmissionLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Emission Strength: 1.5"

[node name="EmissionSlider" type="HSlider" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.1
value = 2.0

[node name="HSeparator3" type="HSeparator" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="AnimationCheckBox" type="CheckBox" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Animate Rotation"

[node name="SpeedLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Rotation Speed: 0.5"

[node name="SpeedSlider" type="HSlider" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
max_value = 3.0
step = 0.1
value = 1.0

[node name="HSeparator4" type="HSeparator" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="RegenerateButton" type="Button" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Regenerate Portal"

[node name="RandomizeButton" type="Button" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Randomize Parameters"

[node name="HSeparator5" type="HSeparator" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="UI/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Blocks: 0"
autowrap_mode = 3
